--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/SceneLoading.js"></script>
 	<script egret="game" src="bin-debug/tools/dlog.js"></script>
 	<!--game_files_end-->
 </head>
